src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) int aruco_DetectorParameters_adaptiveThreshWinSizeMin_get(void* self);
extern "C" __declspec(dllexport) void aruco_DetectorParameters_adaptiveThreshWinSizeMin_set(void* self, int val);
extern "C" __declspec(dllexport) int aruco_DetectorParameters_adaptiveThreshWinSizeMax_get(void* self);
extern "C" __declspec(dllexport) void aruco_DetectorParameters_adaptiveThreshWinSizeMax_set(void* self, int val);
extern "C" __declspec(dllexport) int aruco_DetectorParameters_adaptiveThreshWinSizeStep_get(void* self);
extern "C" __declspec(dllexport) void aruco_DetectorParameters_adaptiveThreshWinSizeStep_set(void* self, int val);
extern "C" __declspec(dllexport) double aruco_DetectorParameters_adaptiveThreshConstant_get(void* self);
extern "C" __declspec(dllexport) void aruco_DetectorParameters_adaptiveThreshConstant_set(void* self, double val);
extern "C" __declspec(dllexport) double aruco_DetectorParameters_minMarkerPerimeterRate_get(void* self);
extern "C" __declspec(dllexport) void aruco_DetectorParameters_minMarkerPerimeterRate_set(void* self, double val);
extern "C" __declspec(dllexport) double aruco_DetectorParameters_maxMarkerPerimeterRate_get(void* self);
extern "C" __declspec(dllexport) void aruco_DetectorParameters_maxMarkerPerimeterRate_set(void* self, double val);
extern "C" __declspec(dllexport) double aruco_DetectorParameters_polygonalApproxAccuracyRate_get(void* self);
extern "C" __declspec(dllexport) void aruco_DetectorParameters_polygonalApproxAccuracyRate_set(void* self, double val);
extern "C" __declspec(dllexport) double aruco_DetectorParameters_minCornerDistanceRate_get(void* self);
extern "C" __declspec(dllexport) void aruco_DetectorParameters_minCornerDistanceRate_set(void* self, double val);
extern "C" __declspec(dllexport) int aruco_DetectorParameters_minDistanceToBorder_get(void* self);
extern "C" __declspec(dllexport) void aruco_DetectorParameters_minDistanceToBorder_set(void* self, int val);
extern "C" __declspec(dllexport) double aruco_DetectorParameters_minMarkerDistanceRate_get(void* self);
extern "C" __declspec(dllexport) void aruco_DetectorParameters_minMarkerDistanceRate_set(void* self, double val);
extern "C" __declspec(dllexport) float aruco_DetectorParameters_minGroupDistance_get(void* self);
extern "C" __declspec(dllexport) void aruco_DetectorParameters_minGroupDistance_set(void* self, float val);
extern "C" __declspec(dllexport) int aruco_DetectorParameters_cornerRefinementMethod_get(void* self);
extern "C" __declspec(dllexport) void aruco_DetectorParameters_cornerRefinementMethod_set(void* self, int val);
extern "C" __declspec(dllexport) int aruco_DetectorParameters_cornerRefinementWinSize_get(void* self);
extern "C" __declspec(dllexport) void aruco_DetectorParameters_cornerRefinementWinSize_set(void* self, int val);
extern "C" __declspec(dllexport) float aruco_DetectorParameters_relativeCornerRefinmentWinSize_get(void* self);
extern "C" __declspec(dllexport) void aruco_DetectorParameters_relativeCornerRefinmentWinSize_set(void* self, float val);
extern "C" __declspec(dllexport) int aruco_DetectorParameters_cornerRefinementMaxIterations_get(void* self);
extern "C" __declspec(dllexport) void aruco_DetectorParameters_cornerRefinementMaxIterations_set(void* self, int val);
extern "C" __declspec(dllexport) double aruco_DetectorParameters_cornerRefinementMinAccuracy_get(void* self);
extern "C" __declspec(dllexport) void aruco_DetectorParameters_cornerRefinementMinAccuracy_set(void* self, double val);
extern "C" __declspec(dllexport) int aruco_DetectorParameters_markerBorderBits_get(void* self);
extern "C" __declspec(dllexport) void aruco_DetectorParameters_markerBorderBits_set(void* self, int val);
extern "C" __declspec(dllexport) int aruco_DetectorParameters_perspectiveRemovePixelPerCell_get(void* self);
extern "C" __declspec(dllexport) void aruco_DetectorParameters_perspectiveRemovePixelPerCell_set(void* self, int val);
extern "C" __declspec(dllexport) double aruco_DetectorParameters_perspectiveRemoveIgnoredMarginPerCell_get(void* self);
extern "C" __declspec(dllexport) void aruco_DetectorParameters_perspectiveRemoveIgnoredMarginPerCell_set(void* self, double val);
extern "C" __declspec(dllexport) double aruco_DetectorParameters_maxErroneousBitsInBorderRate_get(void* self);
extern "C" __declspec(dllexport) void aruco_DetectorParameters_maxErroneousBitsInBorderRate_set(void* self, double val);
extern "C" __declspec(dllexport) double aruco_DetectorParameters_minOtsuStdDev_get(void* self);
extern "C" __declspec(dllexport) void aruco_DetectorParameters_minOtsuStdDev_set(void* self, double val);
extern "C" __declspec(dllexport) double aruco_DetectorParameters_errorCorrectionRate_get(void* self);
extern "C" __declspec(dllexport) void aruco_DetectorParameters_errorCorrectionRate_set(void* self, double val);
extern "C" __declspec(dllexport) float aruco_DetectorParameters_aprilTagQuadDecimate_get(void* self);
extern "C" __declspec(dllexport) void aruco_DetectorParameters_aprilTagQuadDecimate_set(void* self, float val);
extern "C" __declspec(dllexport) float aruco_DetectorParameters_aprilTagQuadSigma_get(void* self);
extern "C" __declspec(dllexport) void aruco_DetectorParameters_aprilTagQuadSigma_set(void* self, float val);
extern "C" __declspec(dllexport) int aruco_DetectorParameters_aprilTagMinClusterPixels_get(void* self);
extern "C" __declspec(dllexport) void aruco_DetectorParameters_aprilTagMinClusterPixels_set(void* self, int val);
extern "C" __declspec(dllexport) int aruco_DetectorParameters_aprilTagMaxNmaxima_get(void* self);
extern "C" __declspec(dllexport) void aruco_DetectorParameters_aprilTagMaxNmaxima_set(void* self, int val);
extern "C" __declspec(dllexport) float aruco_DetectorParameters_aprilTagCriticalRad_get(void* self);
extern "C" __declspec(dllexport) void aruco_DetectorParameters_aprilTagCriticalRad_set(void* self, float val);
extern "C" __declspec(dllexport) float aruco_DetectorParameters_aprilTagMaxLineFitMse_get(void* self);