src/OpenCV5Sharp/Generated/NativeMethods.Objdetect.cs

        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int aruco_DetectorParameters_adaptiveThreshWinSizeMin_get(ArucoDetectorParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_DetectorParameters_adaptiveThreshWinSizeMin_set(ArucoDetectorParametersHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int aruco_DetectorParameters_adaptiveThreshWinSizeMax_get(ArucoDetectorParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_DetectorParameters_adaptiveThreshWinSizeMax_set(ArucoDetectorParametersHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int aruco_DetectorParameters_adaptiveThreshWinSizeStep_get(ArucoDetectorParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_DetectorParameters_adaptiveThreshWinSizeStep_set(ArucoDetectorParametersHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double aruco_DetectorParameters_adaptiveThreshConstant_get(ArucoDetectorParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_DetectorParameters_adaptiveThreshConstant_set(ArucoDetectorParametersHandle self, double val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double aruco_DetectorParameters_minMarkerPerimeterRate_get(ArucoDetectorParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_DetectorParameters_minMarkerPerimeterRate_set(ArucoDetectorParametersHandle self, double val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double aruco_DetectorParameters_maxMarkerPerimeterRate_get(ArucoDetectorParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_DetectorParameters_maxMarkerPerimeterRate_set(ArucoDetectorParametersHandle self, double val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double aruco_DetectorParameters_polygonalApproxAccuracyRate_get(ArucoDetectorParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_DetectorParameters_polygonalApproxAccuracyRate_set(ArucoDetectorParametersHandle self, double val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double aruco_DetectorParameters_minCornerDistanceRate_get(ArucoDetectorParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_DetectorParameters_minCornerDistanceRate_set(ArucoDetectorParametersHandle self, double val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int aruco_DetectorParameters_minDistanceToBorder_get(ArucoDetectorParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_DetectorParameters_minDistanceToBorder_set(ArucoDetectorParametersHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double aruco_DetectorParameters_minMarkerDistanceRate_get(ArucoDetectorParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_DetectorParameters_minMarkerDistanceRate_set(ArucoDetectorParametersHandle self, double val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float aruco_DetectorParameters_minGroupDistance_get(ArucoDetectorParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_DetectorParameters_minGroupDistance_set(ArucoDetectorParametersHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int aruco_DetectorParameters_cornerRefinementMethod_get(ArucoDetectorParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_DetectorParameters_cornerRefinementMethod_set(ArucoDetectorParametersHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int aruco_DetectorParameters_cornerRefinementWinSize_get(ArucoDetectorParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_DetectorParameters_cornerRefinementWinSize_set(ArucoDetectorParametersHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float aruco_DetectorParameters_relativeCornerRefinmentWinSize_get(ArucoDetectorParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_DetectorParameters_relativeCornerRefinmentWinSize_set(ArucoDetectorParametersHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int aruco_DetectorParameters_cornerRefinementMaxIterations_get(ArucoDetectorParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_DetectorParameters_cornerRefinementMaxIterations_set(ArucoDetectorParametersHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double aruco_DetectorParameters_cornerRefinementMinAccuracy_get(ArucoDetectorParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_DetectorParameters_cornerRefinementMinAccuracy_set(ArucoDetectorParametersHandle self, double val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int aruco_DetectorParameters_markerBorderBits_get(ArucoDetectorParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_DetectorParameters_markerBorderBits_set(ArucoDetectorParametersHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int aruco_DetectorParameters_perspectiveRemovePixelPerCell_get(ArucoDetectorParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_DetectorParameters_perspectiveRemovePixelPerCell_set(ArucoDetectorParametersHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double aruco_DetectorParameters_perspectiveRemoveIgnoredMarginPerCell_get(ArucoDetectorParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_DetectorParameters_perspectiveRemoveIgnoredMarginPerCell_set(ArucoDetectorParametersHandle self, double val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double aruco_DetectorParameters_maxErroneousBitsInBorderRate_get(ArucoDetectorParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_DetectorParameters_maxErroneousBitsInBorderRate_set(ArucoDetectorParametersHandle self, double val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double aruco_DetectorParameters_minOtsuStdDev_get(ArucoDetectorParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_DetectorParameters_minOtsuStdDev_set(ArucoDetectorParametersHandle self, double val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double aruco_DetectorParameters_errorCorrectionRate_get(ArucoDetectorParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_DetectorParameters_errorCorrectionRate_set(ArucoDetectorParametersHandle self, double val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float aruco_DetectorParameters_aprilTagQuadDecimate_get(ArucoDetectorParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_DetectorParameters_aprilTagQuadDecimate_set(ArucoDetectorParametersHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float aruco_DetectorParameters_aprilTagQuadSigma_get(ArucoDetectorParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_DetectorParameters_aprilTagQuadSigma_set(ArucoDetectorParametersHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int aruco_DetectorParameters_aprilTagMinClusterPixels_get(ArucoDetectorParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_DetectorParameters_aprilTagMinClusterPixels_set(ArucoDetectorParametersHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int aruco_DetectorParameters_aprilTagMaxNmaxima_get(ArucoDetectorParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_DetectorParameters_aprilTagMaxNmaxima_set(ArucoDetectorParametersHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float aruco_DetectorParameters_aprilTagCriticalRad_get(ArucoDetectorParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void aruco_DetectorParameters_aprilTagCriticalRad_set(ArucoDetectorParametersHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float aruco_DetectorParameters_aprilTagMaxLineFitMse_get(ArucoDetectorParametersHandle self);
